# stempeluhr

./: .gitignore  LICENSE  README.md  stempeluhr.cabal
src/: Main.hs
