name:                stempeluhr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SRechenberger/stempeluhr#readme
license:             BSD3
license-file:        LICENSE
author:              Sascha Rechenberger
maintainer:          sascha.rechenberger@uni-ulm.de
copyright:           Copyright: (c) 2016 Sascha Rechenberger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stempeluhr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, time, directory
  ghc-options:         -Wall
